<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ListV">

    <TextView
        android:id="@+id/activity_list_view_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#DFDFDF"
        android:gravity="center"
        android:text="@string/txt_Long"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/activity_list_view_menuS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:contentDescription="@string/menu_Drop"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/activity_list_view_btnPxTela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_TelaGrid"/>

    <TextView
        android:id="@+id/activity_list_viw_txtList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_list"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view_Lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D5D5D5"
        android:cacheColorHint="#000000" />

</LinearLayout>